crates/anvil-cli/src/tui/layouts/snapshots/anvil__tui__layouts__three_pane__three_pane_always_on_input_tests__three_pane_always_on__200x60.snap
---
source: crates/anvil-cli/src/tui/layouts/three_pane.rs
expression: rendered
---
─── FOCUS───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
No conversation yet. Start typing below.
















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯
─── LOG─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  you  do the thing
  ast  ok

















─── CONTEXT─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Model: claude-sonnet-4-6   in:42 out:17
  Git:   main  +12,-5
















  PageUp/PageDown scroll  ·  Ctrl+Tab tabs  ·  /quit exit
